🚀 Feature: Search page (#203)
* [#51] - Change Search controller & templates to Nearby

* [#51] - Change Search controller & templates to Nearby

* [#51] - Change Search repository to Nearby

* [#51] - Add search page & link to it in search form

* [#51] - Fix nearby active state in menu

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -317,7 +317,7 @@ navbar:
 
 sidebar:
     index: Home
-    search: Finde Achterbahnen in der Nähe
+    nearby: Finde Achterbahnen in der Nähe
     ranking: Weltrangliste der Achterbahnen
     users: Unsere Fahrer
     map: Achterbahn Landkarte
@@ -391,7 +391,7 @@ notif:
         view: 'Sehe es dir auf <a href="{link_path}">CaptainCoaster.com</a> an'
         unsubscribe: 'Um dies nicht mehr zu erhalten, ändere bitte deine <a href="{link_path}">Benachrichtigungseinstellungen</a>.'
 
-search_index:
+nearby:
     title: Finde Achterbahnen in der Nähe
     num_found: '{num} Achterbahnen gefunden'
     geo_on: Lokalisierung aktiviert
@@ -443,3 +443,28 @@ missing:
 
 banner:
     coasters: '{count, plural, one {1 coaster} other {# coasters}}'
+
+search_index:
+    title: Suche
+    more: Alle Ergebnisse anzeigen
+    noResult: Keine Ergebnisse
+    noTerm: Kein Suchbegriff
+    short: Ihre Suche ist zu kurz und muss mehr als 2 Zeichen enthalten.
+    coasters_found: >-
+        {num, plural,
+            =0 {Keine Achterbahnen gefunden}
+            =1 {1 Achterbahn gefunden}
+            other {# Achterbahnen gefunden}
+        }
+    parks_found: >-
+        {num, plural,
+            =0 {Keine Parks oder Schausteller gefunden}
+            =1 {1 Park oder Schausteller gefunden}
+            other {# Parks oder Schausteller gefunden}
+        }
+    users_found: >-
+        {num, plural,
+            =0 {Keine Benutzer gefunden}
+            =1 {1 Benutzer gefunden}
+            other {# Benutzer gefunden}
+        }
