--- a/translations/messages+intl-icu.es.yml
+++ b/translations/messages+intl-icu.es.yml
@@ -317,7 +317,7 @@ navbar:
 
 sidebar:
     index: Pagina de inicio
-    search: Busca una montaña rusa
+    nearby: Montañas rusas cercanas
     ranking: Las mejores montañas rusas
     users: Nuestros usuarios
     map: Mapa de las montañas rusas
@@ -391,7 +391,7 @@ notif:
         view: 'Ver esto en <a href="{link_path}">CaptainCoaster.com</a>'
         unsubscribe: 'Para dejar de recibirlo, cambie sus <a href="{link_path}">preferencias de notificación</a>.'
 
-search_index:
+nearby:
     title: Busca una montaña rusa
     num_found: '{num} montañas rusas encontradas'
     geo_on: Geolocalización activada
@@ -443,3 +443,28 @@ missing:
 
 banner:
     coasters: '{count, plural, one {1 montaña rusa} other {# montañas rusas}}'
+
+search_index:
+    title: Buscar
+    more: Ver todos los resultados
+    noResult: No hay resultados
+    noTerm: No hay término de búsqueda
+    short: Su búsqueda es demasiado corta y debe contener más de 2 caracteres.
+    coasters_found: >-
+        {num, plural,
+            =0 {No se han encontrado montañas rusas}
+            =1 {1 montaña rusa encontrada}
+            other {# montañas rusas encontradas}
+        }
+    parks_found: >-
+        {num, plural,
+            =0 {No se han encontrado parque o propietario}
+            =1 {1 parque o propietario encontrado}
+            other {# parques o propietarios encontrados}
+        }
+    users_found: >-
+        {num, plural,
+            =0 {No se han encontrado usuario}
+            =1 {1 usuario encontrado}
+            other {# usuarios encontrados}
+        }
