add link to the blog

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -323,6 +323,7 @@ sidebar:
     map: Achterbahn Landkarte
     top: Tops
     review: Achterbahn Rezensionen
+    blog: Blog
     contact: Kontaktiere uns
     logout: Abmelden
     login: Anmelden
