--- a/translations/messages+intl-icu.es.yml
+++ b/translations/messages+intl-icu.es.yml
@@ -323,6 +323,7 @@ sidebar:
     map: Mapa de las montañas rusas
     top: 'Tops'
     review: Reseñas de montaña rusa
+    blog: Blog
     contact: Estar en contacto
     logout: Cerrar sesión
     login: Iniciar sesión
