--- a/translations/messages+intl-icu.fr.yml
+++ b/translations/messages+intl-icu.fr.yml
@@ -323,6 +323,7 @@ sidebar:
     map: Carte des coasters
     top: Les tops
     review: Tous les avis
+    blog: Blog
     contact: Nous contacter
     logout: Déconnexion
     login: Connexion
