[#228] - Display top 100 stat depending on User's setting

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -173,6 +173,8 @@ profile:
         countries: Länder
         most_country: Am meisten gefahren in
         top_100: Gefahren in den Top 100
+        top_100_plus_closed: '+ {coasters} geschlossen'
+        top_100_including_closed: 'dessen {coasters} geschlossen'
         manufacturer: Am meisten gefahren
     ratings:
         title: Meine Bewertungen
