[#228] - Remove User's setting to display 2 top 100 stats by default

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -173,8 +173,7 @@ profile:
         countries: Länder
         most_country: Am meisten gefahren in
         top_100: Gefahren in den Top 100
-        top_100_plus_closed: '+ {coasters} geschlossen'
-        top_100_including_closed: 'dessen {coasters} geschlossen'
+        top_100_operating: in den Top 100 in Betrieb Achterbahnen
         manufacturer: Am meisten gefahren
     ratings:
         title: Meine Bewertungen
@@ -210,8 +209,6 @@ profile:
                 metric: Internationale Einheitensystem
                 imperial: Britische Einheitensystem
                 label: Anzeigen von Entfernungen und Statistiken in
-            hideNonOperatingCoastersInTop100Stat:
-                label: Verstecke geschlossene Achterbahnen im Ranking und in deine gefahrenen Achterbahnen in den Top 100
             displayReviewsInAllLanguages:
                 label: Anzeigen in verschiedenen Sprachen verfasste Bewertungen
             addTodayDateWhenRating:
