--- a/translations/messages+intl-icu.es.yml
+++ b/translations/messages+intl-icu.es.yml
@@ -172,19 +172,13 @@ profile:
         parks: parques
         countries: países
         most_country: más montados de
-        top_100: montados en el top 100
-        top_100_plus_closed: >-
+        top_100: >-
             {coasters, plural,
-                =0 {+ 0 cerrado}
-                =1 {+ 1 cerrado}
-                other {+ # carrados}
+                =0 {montado en el top 100}
+                =1 {montado en el top 100}
+                other {montados en el top 100}
             }
-        top_100_including_closed: >-
-            {coasters, plural,
-                =0 {dont 0 cerrado}
-                =1 {dont 1 cerrado}
-                other {# de ellos cerrados}
-            }
+        top_100_operating: en el top 100 montañas rusas abertias
         manufacturer: más montado
     ratings:
         title: Mis notas
@@ -220,8 +214,6 @@ profile:
                 metric: Sistema Internacional de unidades
                 imperial: Sistema anglosajón de unidades
                 label: Mostrar distancias y estadísticas en
-            hideNonOperatingCoastersInTop100Stat:
-                label: Oculta las montañas rusas cerradas en la Clasificación y tus montañas rusas montadas en el Top 100
             displayReviewsInAllLanguages:
                 label: Mostrar reseñas escritas en diferentes lenguas
             addTodayDateWhenRating:
