--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -346,7 +346,6 @@ login:
     redirect_to_register: 'Neu bei Captain Coaster? <a href="{link_path}">Konto erstellen</a>'
     or_sign_in_with: oder
     connect_with_google: Mit Google anmelden
-    facebook_login_disclaimer: "Ehemalige Facebook-Login-Nutzer, bitte melden Sie sich mit der E-Mail-Adresse an, die mit Ihrem Facebook-Konto verknüpft ist"
     terms: 'Durch die Fortsetzung bestätigen Sie, dass Sie unsere <a href="{link_path}">Allgemeinen Geschäftsbedingungen</a> akzeptieren.'
     email:
         title: Anmelden bei Captain Coaster
@@ -355,12 +354,14 @@ login:
         button: Anmelden
         paragraph2: "Sie haben diese E-Mail erhalten, weil Sie versuchen, sich bei Captain Coaster anzumelden. Wenn Sie nicht sicher sind, warum Sie diese E-Mail erhalten, kontaktieren Sie uns bitte, indem Sie auf diese E-Mail antworten."
     link_sent: "Wenn ein Konto mit {email} verknüpft ist, erhalten Sie einen Anmelde-Link. Klicken Sie auf den Link, um sich anzumelden."
+    rate_limit_exceeded: "Zu viele Anmeldeversuche. Bitte versuchen Sie es später erneut."
     account_disabled: 'Ihre E-Mail-Adresse {email} wurde nicht verifiziert. Bitte <a href="{link_path}">registrieren</a> Sie sich oder klicken Sie auf den Link, den Sie nach der Registrierung erhalten haben, um Ihr Konto zu aktivieren.'
 
 register:
     title: Ein Konto erstellen
     subtitle: Bitte füllen Sie alle untenstehenden Felder aus
     link_sent: "Konto erstellt! Bitte überprüfen Sie Ihre E-Mail ({email}) und klicken Sie auf den Link, um Ihr Konto zu aktivieren."
+    rate_limit_exceeded: "Zu viele Registrierungsversuche. Bitte versuchen Sie es später erneut."
     form:
         email: E-Mail
         first_name: Vorname
