--- a/translations/messages+intl-icu.en.yml
+++ b/translations/messages+intl-icu.en.yml
@@ -346,7 +346,7 @@ login:
     redirect_to_register: 'New to Captain Coaster? <a href="{link_path}">Create an account</a>'
     or_sign_in_with: "or"
     connect_with_google: "Connect with google"
-    facebook_login_disclaimer: "Former Facebook login users, please sign in using the email address associated to your Facebook account"
+
     terms: 'By continuing, you confirm that you accept our <a href="{link_path}">Terms &amp; Conditions</a>'
     email:
         title: "Sign in to Captain Coaster"
@@ -355,12 +355,14 @@ login:
         button: "Sign in"
         paragraph2: "You received this email because you are trying to sign in to Captain Coaster. If you are not sure why you are receiving this, please contact us by replying to this email."
     link_sent: "If an account is associated with {email}, you will receive a login link. Click on the link to sign in"
+    rate_limit_exceeded: "Too many login attempts. Please try again later."
     account_disabled: 'Your email {email} has not been verified. Please <a href="{link_path}">register</a> or click on the link you received after registering to activate your account.'
 
 register:
     title: "Create an account"
     subtitle: "Please fill in all the fields below"
     link_sent: "Account created! Please check your email ({email}) and click on the link to activate your account."
+    rate_limit_exceeded: "Too many registration attempts. Please try again later."
     form:
         email: "Email"
         first_name: "First Name"
