--- a/translations/messages+intl-icu.es.yml
+++ b/translations/messages+intl-icu.es.yml
@@ -346,7 +346,6 @@ login:
     redirect_to_register: '¿Eres nuevo en Captain Coaster? <a href="{link_path}">Crea una cuenta</a>'
     or_sign_in_with: o
     connect_with_google: Conectar con Google
-    facebook_login_disclaimer: "Usuarios de Facebook login, por favor inicien sesión utilizando el correo electrónico asociada a su cuenta de Facebook"
     terms: 'Al continuar, confirmas que aceptas nuestros <a href="{link_path}">Términos y Condiciones</a>'
     email:
         title: Iniciar sesión en Captain Coaster
@@ -355,12 +354,14 @@ login:
         button: Iniciar sesión
         paragraph2: "Recibiste este correo electrónico porque estás intentando iniciar sesión en Captain Coaster. Si no estás seguro(a) de por qué estás recibiendo esto, contáctanos respondiendo a este correo electrónico."
     link_sent: "Si hay una cuenta asociada con {email}, recibirás un enlace de inicio de sesión. Haz clic en el enlace para iniciar sesión."
+    rate_limit_exceeded: "Demasiados intentos de inicio de sesión. Por favor, inténtalo de nuevo más tarde."
     account_disabled: 'Tu correo electrónico {email} no ha sido verificado. Por favor, <a href="{link_path}">regístrate</a> o haz clic en el enlace que recibiste después de registrarte para activar tu cuenta.'
 
 register:
     title: Crear una cuenta
     subtitle: "Por favor, complete todos los campos a continuación"
     link_sent: "¡Cuenta creada! Por favor, revise su correo electrónico ({email}) y haga clic en el enlace para activar su cuenta."
+    rate_limit_exceeded: "Demasiados intentos de registro. Por favor, inténtalo de nuevo más tarde."
     form:
         email: Correo electrónico
         first_name: Nombre
